--- a/index.html
+++ b/index.html
@@ -5,64 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Throw Dice</title>
-    <style>
-        body{
-            background-color: rgb(237, 87, 27);
-        }
-        #winner{
-            text-align: center;
-            font-size: 50px;
-            margin: 50px;
-            padding-bottom: 40px;
-            padding-top: 40px;
-        }
-        #container{
-            display: inline;
-            text-align: center;
-            font-size: 55px;
-            padding: 30px;  
-            display: flex; 
-            justify-content: space-evenly;
-            
-        }
-        #member-1{
-            width: 120px;
-            height: 100px;
-            border: 1px solid black;
-            border-radius: 5px;
-            padding-top: 25px;
-        }
-        #member-2{
-            width: 120px;
-            height: 100px;
-            border: 1px solid black;
-            border-radius: 5px;
-            padding-top: 25px;
-        }
-        #member-3{
-            width: 120px;
-            height: 100px;
-            border: 1px solid black;
-            border-radius: 5px;
-            padding-top: 25px;
-        }
-        button{
-            width: 180px;
-            height: 50px;
-            border-radius: 10px;
-            border: 0px;
-            display: block;
-            margin: auto;
-            background: linear-gradient(to right, #3b63ff,#fe192c);
-            font-size: 20px;
-            margin-top: 130px;
-        }
-        button:hover{
-            cursor: pointer;
-            background: linear-gradient(to left, #3b63ff,#fe192c);
-        }
-        
-    </style>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
 <div id="winner">WINNER :-</div>
